# vantageterm

./: .gitignore  DEVLOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: changes.ts  editors.ts  ipc.ts  main.ts  projects.ts  splitters.ts  stt.ts  styles.css  tabs.ts  term.ts  tree.ts  tts.ts  ui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  stt.rs  tts.rs
