[package]
name = "vantageterm"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"

# Optional, fully-local speech-to-text. Only compiled with `--features stt`, so
# the default build pulls in neither the audio stack nor whisper.cpp.
cpal = { version = "0.15", optional = true }
whisper-rs = { version = "0.14", optional = true }

# Optional, fully-local text-to-speech. Only compiled with `--features tts`, so
# the default build pulls in neither onnxruntime nor the playback stack.
piper-rs = { version = "0.2", optional = true }
rodio = { version = "0.19", optional = true }

[features]
default = []
stt = ["dep:cpal", "dep:whisper-rs"]
tts = ["dep:piper-rs", "dep:rodio"]

[profile.release]
strip = true
lto = true
